--- a/css/main.css
+++ b/css/main.css
@@ -32,6 +32,25 @@ img {
     margin-top: 10px;
     width: 50%;
 }
+.product-info ul {
+    border: 2px dashed #16C0B0;
+    height: 150px;
+    width: 20%;
+    border-bottom-left-radius: 10px;
+    border-top-right-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.variant {
+    width: 50px;
+    height: 50px;
+    display: flex;
+    flex-direction: column;
+    margin: 10px;
+    border-radius: 5px;
+    align-items: center;
+}
 
 .color-box {
     width: 40px;
@@ -42,8 +61,9 @@ img {
 .cart {
     margin-right: 25px;
     float: right;
-    border: 1px solid #d8d8d8;
+    border: 1px solid #16C0B0;
     padding: 5px 20px;
+    border-radius: 10px;
 }
 
 button {
@@ -54,6 +74,7 @@ button {
     height: 40px;
     width: 100px;
     font-size: 14px;
+    border-radius: 5px;
 }
 
 .disabledButton {
