--- a/css/main.css
+++ b/css/main.css
@@ -76,6 +76,9 @@ button {
     font-size: 14px;
     border-radius: 5px;
 }
+.line-through {
+    text-decoration: line-through;
+}
 
 .disabledButton {
     background-color: #d8d8d8;
