--- a/css/main.css
+++ b/css/main.css
@@ -33,11 +33,10 @@ img {
     width: 50%;
 }
 .product-info ul {
-    border: 2px dashed #16C0B0;
+    border: 2px solid #000;
     height: 150px;
     width: 20%;
-    border-bottom-left-radius: 10px;
-    border-top-right-radius: 10px;
+
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -61,7 +60,7 @@ img {
 .cart {
     margin-right: 25px;
     float: right;
-    border: 1px solid #16C0B0;
+    border: 1px solid #000000;
     padding: 5px 20px;
     border-radius: 10px;
 }
